desenv_tests/test-assets/field/failure/nested_with_default_value.stderr
error: cannot set `default` with value modifier on a field marked as `nested`
 --> test-assets/field/failure/nested_with_default_value.rs:5:5
  |
5 |     #[desenv(nested, default(value = "value"))]
  |     ^
