desenv_tests/test-assets/field/failure/nested_with_default_value.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(nested, default(value = "value"))]
    field: String
}

fn main(){}